# gda

./: .gitignore  AGENTS.md  README.md  gda.yml  justfile  pyproject.toml
.github/workflows/: run-local-tests.yml
dev/mocks/: __init__.py  github.py  item_storage.py
dogfood/source/: dogfood.txt
src/gda/: __init__.py  __main__.py  context.py  errors.py  main.py
src/gda/commands/: __init__.py  init.py  pull.py  push.py  resolve.py
src/gda/models/: __init__.py  lockfile.py  manifest.py
src/gda/protocols/: __init__.py  archive.py  github.py
src/gda/services/: __init__.py  archive.py  github.py  sync.py
src/typ_tmpl/: context.py  main.py
src/typ_tmpl/commands/: add.py  delete.py  list.py
src/typ_tmpl/models/: __init__.py  item.py
src/typ_tmpl/protocols/: __init__.py  item_storage.py
src/typ_tmpl/services/: __init__.py  item_storage.py
tests/: conftest.py
tests/intg/: test_cli.py  test_interactions.py  test_pull_bootstrap.py
tests/unit/: test_archive.py  test_context.py  test_init.py  test_item_storage.py  test_lockfile.py  test_manifest.py
