[project]
name = "gda"
version = "0.1.0"
description = "GitHub Data Assets - Manage large data assets using GitHub Releases."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rich>=14.0.0,<15.0.0",
    "typer>=0.20.0,<1.0.0",
]

[project.scripts]
gda = "gda.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.6.1",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "-q -s --tb=short"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["gda"]
strict = true
